<resources>
    <string name="app_name">املاک فایل همراه</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_hint_full_name">نام و نام خانوادگی</string>
    <string name="txt_hint_name">نام</string>
    <string name="txt_please_enter_full_name">لطفا نام و نام خانوادگی خود را وارد کنید</string>
    <string name="txt_hint_please_enter_name">لطفا نام خود را وارد کنید</string>
    <string name="txt_hint_family">نام خانوادگی</string>
    <string name="txt_hint_please_enter_family">لطفا نام خانوادگی خود را وارد کنید</string>
    <string name="txt_hint_username">نام کاربری</string>
    <string name="txt_hint_province">استان</string>
    <string name="txt_hint_please_enter_province">لطفا استان خود را انتخاب کنید</string>
    <string name="txt_hint_city">شهر</string>
    <string name="txt_hint_please_enter_city">لطفا شهر خود را وارد کنید</string>
    <string name="txt_hint_please_enter_amlak_name">لطفا نام املاک خود را وارد کنید</string>
    <string name="txt_hint_name_amlak">نام املاک</string>
    <string name="txt_enter_name_amlak">لطفا نام املاک خود را وارد کنید</string>
    <string name="txt_btn_next_program">ورود به برنامه</string>
    <string name="txt_frosh_maskoni">فروش مسکونی</string>
    <string name="txt_ejare_maskoni">اجاره مسکونی</string>
    <string name="txt_ejare_edari_tejari">اجاره اداری و تجاری</string>
    <string name="txt_frosh_edari_tejari">فروش اداری و تجاری</string>
    <string name="txt_projects_sakhtosaz">پروژه های ساخت و ساز</string>
    <string name="txt_dasteha">دسته ها</string>
    <string name="txt_profile">حساب کاربری</string>
    <string name="txt_add_file">ثبت فایل جدید</string>
    <string name="txt_btn_add_file">ثبت فایل جدید</string>
    <string name="txt_please_selected_file">کاربر گرامی لطفا جهت ثبت فایل یکی از گزینه های زیر را انتخاب کنید.</string>
    <string name="txt_add_kharid_frosh">ثبت خرید و فروش</string>
    <string name="txt_add_file_rahn_ejare">ثبت رهن و اجاره</string>
    <string name="txt_add_zamin">ثبت زمین</string>
    <string name="txt_mosharekat">مشارکت در ساخت و ساز</string>
    <string name="txt_info_all">مشخصات کلیدی (اجباری)</string>
    <string name="txt_user_add_file">ثبت کننده آگهی</string>
    <string name="txt_selected">انتخاب کنید</string>
    <string name="txt_type_file">نوع آگهی</string>
    <string name="txt_type_user">نوع کاربری</string>
    <string name="txt_selection_type_user">لطفا نوع کاربری را انتخاب کنید</string>
    <string name="txt_enter_counter_all_tabaghat">لطفا تعداد کل طبقات را وارد کنید</string>
    <string name="txt_enter_counter_all_vahedha">لطفا تعداد کل واحد ها را وارد کنید</string>
    <string name="txt_enter_counter_har_tabaghe">لطفا تعداد واحد در هر طبقه را وارد کنید</string>
    <string name="txt_selection_jahat_sakhteman">لطفا جهت ساختمان را انتخاب کنید</string>
    <string name="txt_selection_jense_kaf">لطفا جنس کف را انتخاب کنید</string>
    <string name="txt_selection_kabinet">لطفا کابینت را انتخاب کنید</string>
    <string name="txt_selection_wc">لطفا سرویس بهداشتی را انتخاب کنید</string>
    <string name="txt_selection_garmayesh">لطفا گرمایش را انتخاب کنید</string>
    <string name="txt_selection_sarmayesh">لطفا سرمایس را انتخاب کنید</string>
    <string name="txt_selection_jahat_vahed">لطفا جهت واحد را انتخاب کنید</string>
    <string name="txt_type_user2">نوع کاربری : </string>
    <string name="txt_type_sanad">نوع سند</string>
    <string name="txt_selection_type_sanad">لطفا نوع سند را انتخاب کنید</string>
    <string name="txt_type_sanad2">نوع سند : </string>
    <string name="txt_metrazh_moraba">متراژ (متر مربع)</string>
    <string name="txt_metrazh_moraba2">متراژ (متر مربع) : </string>
    <string name="txt_location">محله</string>
    <string name="txt_enter_location">لطفا موقعیت را وارد کنید</string>
    <string name="txt_location2">محله : </string>
    <string name="txt_age_bana">سن بنا</string>
    <string name="txt_selection_age_bana">لطفا سن بنا را انتخاب کنید</string>
    <string name="txt_age_bana2">سن بنا : </string>
    <string name="txt_tabaghe">طبقه</string>
    <string name="txt_selection_tabaghe">لطفا طبقه را انتخاب کنید</string>
    <string name="txt_tabaghe2">طبقه : </string>
    <string name="txt_cunter_otagh">تعداد اتاق خواب</string>
    <string name="txt_selection_cunter_otagh">لطفا تعداد اتاق خواب را انتخاب کنید</string>
    <string name="txt_cunter_otagh2">تعداد اتاق خواب : </string>
    <string name="txt_vaziyad_melk">وضعیت ملک</string>
    <string name="txt_selection_vaziyad_melk">لطفا وضعیت ملک را انتخاب کنید</string>
    <string name="txt_vaziyad_melk2">وضعیت ملک : </string>
    <string name="txt_title_price">قیمت ملک (اجباری)</string>
    <string name="txt_melk_price">قیمت ملک</string>
    <string name="txt_enter_price_melk">لطفا قیمت ملک مورد نظر را به تومان وارد کنید</string>
    <string name="txt_title_possibilities">سایر ویژگی ها و امکانات</string>
    <string name="txt_wc">سرویس بهداشتی</string>
    <string name="txt_wc2">سرویس بهداشتی : </string>
    <string name="txt_nema_sakhteman">نمای ساختمان</string>
    <string name="txt_selection_nema_sakhteman">لطفا نمای ساختمان را انتخاب کنید</string>
    <string name="txt_nema_sakhteman2">نمای ساختمان : </string>
    <string name="txt_asansor">آسانسور</string>
    <string name="txt_shofazh">شوفاژ</string>
    <string name="txt_garmayesh">گرمایش از کف</string>
    <string name="txt_anbari">انباری</string>
    <string name="txt_fan_quel">فن کویل</string>
    <string name="txt_koler_gazi">کولر گازی</string>
    <string name="txt_koler_abi">کولر آبی</string>
    <string name="txt_parking">پارکینگ</string>
    <string name="txt_img_file">عکس آگهی</string>
    <string name="txt_selected_img">انتخاب عکس</string>
    <string name="txt_save">ذخیره</string>
    <string name="txt_cancel">لغو</string>
    <string name="txt_maskoni_vilayi">مسکونی ویلایی</string>
    <string name="txt_maskoni_aparteman">مسکونی آپارتمان</string>
    <string name="txt_tejari">تجاری</string>
    <string name="txt_edari">اداری</string>
    <string name="txt_anbari_sole">انباری و سوله</string>
    <string name="txt_sanati_karkhane">صنعتی _ کارخانه</string>
    <string name="txt_bagh_vila">باغ و ویلا</string>
    <string name="txt_keshavarzi_damdari">کشاورزی و دامداری</string>
    <string name="txt_zamin_ba_karbari_maskoni">زمین با کاربری مسکونی</string>
    <string name="txt_amin_ba_karbari_bagh_vila">زمین با کاربری باغ و ویلا</string>
    <string name="txt_kolangi">کلنگی</string>
    <string name="txt_hotel_eghamati">هتل و اقامتی</string>
    <string name="txt_amozeshi_varzeshi">آموزشی و ورزشی</string>
    <string name="txt_darmani">درمانی</string>
    <string name="txt_eghamati">اقامتی</string>
    <string name="txt_gheyre">غیره ...</string>
    <string name="txt_entery_user">لطفا کاربر ثبت کننده را وارد کنید.</string>
    <string name="txt_enter_metrazh">متراژ را به متر مربع وارد کنید.</string>
    <string name="txt_select_all">همه موارد را دارد</string>
    <string name="txt_does_not_have">ندارد</string>
    <string name="txt_not_selected">این گزینه انتخاب نشده</string>
    <string name="txt_has_it">دارد</string>
    <string name="txt_information_save_successfully">اطلاعات با موفقیت ذخیره شد</string>
    <string name="txt_save_infonmation_failure">ذخیره اطلاعات با خطا مواحه شد</string>
    <string name="txt_create_file">کاربر گرامی آیا فایل جدیدی میخواهید ثبت کنید ؟</string>
    <string name="txt_inactive">کاربر گرامی این امکان فعلا برای شما غیر فعال است.</string>
    <string name="txt_yes_i_register">بله ثبت میکنم</string>
    <string name="txt_kheyr_go_to_org_page">خیر برو به صفحه اول</string>
    <string name="txt_register_file_kharid_forosh">ثبت فایل خرید و فروش</string>
    <string name="txt_register_file_rahn_ejare">ثبت فایل رهن و اجاره</string>
    <string name="txt_estelam_vekalatname">استعلام وکالتنامه</string>
    <string name="txt_akharin_moamelat_mataghe">آخرین معاملات منطقه ای</string>
    <string name="txt_estelam_chek_sayadi">استعلام چک صیادی</string>
    <string name="txt_taeidiye_postal_code">تایدیه کد پستی</string>
    <string name="txt_ok">تایید</string>
    <string name="ok">بله</string>
    <string name="n_ok">خیر</string>
    <string name="txt_karbar_grami">کاربر گرامی</string>
    <string name="txt_motevajeh_shodam">متوجه شدم</string>
    <string name="txt_ejbari_mibashad">اجباری میباشد</string>
    <string name="txt_item">item</string>
    <string name="txt_register_kharid">ثبت فایل با جزئیات کلیدی</string>
    <string name="txt_register_all_jozeyat">ثبت فایل با تمام جزئیات‌</string>
    <string name="txt_owner_full_name">نام و نام خانوادگی مالک</string>
    <string name="txt_hint_phone_number">شماره همراه</string>
    <string name="txt_please_enter_phone_number">لطفا شماره همراه خود را وارد کنید</string>
    <string name="txt_phone_owner">شماره تلفن مالک</string>
    <string name="txt_cabinets">کابینت</string>
    <string name="txt_cabinets2">کابینت : </string>
    <string name="txt_address_file">آدرس فایل</string>
    <string name="txt_please_enter_address_melk">لطفا آدرس ملک را وارد کنید</string>
    <string name="txt_description">توضیحات</string>
    <string name="txt_sure_description">در صورت صلاحدید میتوانید توضیحات را وارد کنید</string>
    <string name="txt_counter_all_tabaghat">تعداد کل طبقات</string>
    <string name="txt_counter_all_tabaghat2">تعداد کل طبقات : </string>
    <string name="txt_num_5">مثال : 5</string>
    <string name="txt_counter_all_vahedha">تعداد کل واحدها</string>
    <string name="txt_counter_all_vahedha2">تعداد کل واحدها : </string>
    <string name="txt_num_20">مثال : 20</string>
    <string name="txt_counter_vahedha_dar_tabaghe">تعداد واحد در هر طبقه</string>
    <string name="txt_counter_vahedha_dar_tabaghe2">تعداد واحد در هر طبقه : </string>
    <string name="txt_num_4">مثال : 4</string>
    <string name="txt_jahat_sakhteman">جهت ساختمان</string>
    <string name="txt_jahat_sakhteman2">جهت ساختمان : </string>
    <string name="txt_jahat_vahed">جهت واحد</string>
    <string name="txt_jahat_vahed2">جهت واحد : </string>
    <string name="txt_jens_kaf">جنس کف</string>
    <string name="txt_jens_kaf2">جنس کف : </string>
    <string name="txt_garmayesh_select">گرمایش</string>
    <string name="txt_garmayesh_select2">گرمایش : </string>
    <string name="txt_sarmayesh">سرمایش</string>
    <string name="txt_sarmayesh2">سرمایش : </string>
    <string name="txt_melk_bazsazi_shode">ملک بازسازی شده</string>
    <string name="txt_balkon_darad">بالکن دارد</string>
    <string name="txt_sona">سونا</string>
    <string name="txt_jakozi">جکوزی</string>
    <string name="txt_estakhr">استخر</string>
    <string name="txt_iphon_tasviri">آیفن تصویری</string>
    <string name="txt_gaz_romozi">گاز رو میزی</string>
    <string name="txt_hod">هود</string>
    <string name="txt_darb_zed_serghat">درب ضد صرقت</string>
    <string name="txt_komod_divari">کمد دیواری</string>
    <string name="txt_hayat">حیاط</string>
    <string name="txt_address">آدرس</string>
    <string name="txt_next">بعدی</string>
    <string name="txt_name_owner">نام مالک</string>
    <string name="txt_please_enter_name_owner">لطفا نام مالک را وارد کنید.</string>
    <string name="txt_family_owner">نام خانوادگی مالک</string>
    <string name="txt_enter_family_owner">لطفا نام خانوادگی مالک را وارد کنید.</string>
    <string name="txt_phone_number_owner">شماره همراه مالک</string>
    <string name="txt_enter_phone_number_owner">لطفا شماره همراه مالک را وارد کنید.</string>
    <string name="txt_previous">قبلی</string>
    <string name="txt_select_map">انتخاب آدرس از روی نقشه</string>
    <string name="txt_enter_metrazh_moraba">لطفا متراژ ملک را به متر مربع وارد کنید.</string>
    <string name="txt_enter_address_melk">لطفا آدرس ملک را وارد کنید.</string>
    <string name="txt_sure_not_emkanat">آیا مطمئن هستید ملک مورد نظر هیچ امکاناتی ندارد؟</string>
    <string name="txt_ok_sure">بله مطمئن هستم</string>
    <string name="txt_no_selected">خیر / انتخاب میکنم</string>
</resources>