<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_one"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_txt_address_file"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/txt_address"
        android:textColorHint="@color/md_indigo_500"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/md_indigo_500"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/md_indigo_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconTint="@color/md_indigo_500">

        <com.dev.amr.amlakfile.data.model.custom_views.IEditText
            android:id="@+id/edt_name_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="8dp"
            android:enabled="true"
            android:hint="@string/txt_enter_address_melk"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/md_indigo_500"
            android:textColorHint="@color/md_grey_500"
            android:textSize="12sp"
            app:mode="PERSIAN_TEXT_NORMAL16"
            tools:ignore="MissingPrefix" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.dev.amr.amlakfile.data.model.custom_views.ITextView
        android:id="@+id/btn_select_map"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:background="@drawable/border9"
        android:text="@string/txt_select_map"
        android:gravity="center"
        android:textColor="@color/color_btn_login"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_txt_address_file"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_txt_metrazh_moraba"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/txt_metrazh_moraba"
        android:textColorHint="@color/md_indigo_500"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/md_indigo_500"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/md_indigo_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_map"
        app:startIconTint="@color/md_indigo_500">

        <com.dev.amr.amlakfile.data.model.custom_views.IEditText
            android:id="@+id/edt_metrazh_moraba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="8dp"
            android:enabled="true"
            android:hint="@string/txt_enter_metrazh_moraba"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/md_indigo_500"
            android:textColorHint="@color/md_grey_500"
            android:textSize="12sp"
            app:mode="PERSIAN_TEXT_NORMAL16"
            tools:ignore="MissingPrefix" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.dev.amr.amlakfile.data.model.custom_views.IButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:text="@string/txt_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.dev.amr.amlakfile.data.model.custom_views.IButton
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_shape_gray"
            android:gravity="center"
            android:text="@string/txt_previous"
            android:textColor="@color/color_btn_login"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_next" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

