<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_one"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_txt_name_owner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/txt_name_owner"
        android:textColorHint="@color/md_indigo_500"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/md_indigo_500"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/md_indigo_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconTint="@color/md_indigo_500">

        <com.dev.amr.amlakfile.data.model.custom_views.IEditText
            android:id="@+id/edt_name_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="true"
            android:hint="@string/txt_please_enter_name_owner"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/md_indigo_500"
            android:textColorHint="@color/md_grey_500"
            android:textSize="12sp"
            app:mode="PERSIAN_TEXT_NORMAL16"
            tools:ignore="MissingPrefix" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_txt_family_owner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/txt_family_owner"
        android:textColorHint="@color/md_indigo_500"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/md_indigo_500"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/md_indigo_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_txt_name_owner">

        <com.dev.amr.amlakfile.data.model.custom_views.IEditText
            android:id="@+id/edt_family_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="@string/txt_enter_family_owner"
            android:inputType="number"
            android:letterSpacing="0.2"
            android:minHeight="36dp"
            android:padding="18dp"
            android:textColor="@color/md_indigo_500"
            android:textColorHint="@color/md_grey_500"
            android:textSize="12sp"
            app:mode="PERSIAN_TEXT_NORMAL16"
            tools:ignore="MissingPrefix" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_txt_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/txt_phone_number_owner"
        android:textColorHint="@color/md_indigo_500"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/md_indigo_500"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/md_indigo_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_txt_family_owner">

        <com.dev.amr.amlakfile.data.model.custom_views.IEditText
            android:id="@+id/edt_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="@string/txt_enter_phone_number_owner"
            android:inputType="number"
            android:minHeight="36dp"
            android:padding="18dp"
            android:letterSpacing="1"
            android:textColor="@color/md_indigo_500"
            android:textColorHint="@color/md_grey_500"
            android:textSize="12sp"
            app:mode="PERSIAN_TEXT_NORMAL16"
            tools:ignore="MissingPrefix" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

